@@ -1,3 +1,7 @@
+2005-02-23  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourceview.c: small cleanup.
+
 2005-02-12  Paolo Maggi  <paolo@gnome.org>
 
 	* gtksourceview/language-specs/php.lang: added some missing
